@@ -50,7 +50,7 @@
 #include "sakar-avi-header.h"
 #define GP_MODULE "sonix"
 
-struct {
+static const struct {
    	char *name;
 	CameraDriverStatus status;
    	unsigned short idVendor;
