@@ -2,13 +2,13 @@
 #define __SAKAR_AVI_HEADER_H
 
 #define SAKAR_AVI_FRAME_HEADER_LENGTH	8
-unsigned char SakarAviFrameHeader[SAKAR_AVI_FRAME_HEADER_LENGTH] = {
+static const unsigned char SakarAviFrameHeader[SAKAR_AVI_FRAME_HEADER_LENGTH] = {
 	0x30, 0x30, 0x64, 0x63, /* 00dc */
 	0x00, 0x00, 0x00, 0x00 /* size of frame */
 };
 
 #define SAKAR_AVI_HEADER_LENGTH 224
-unsigned char SakarAviHeader[SAKAR_AVI_HEADER_LENGTH] = {
+static const unsigned char SakarAviHeader[SAKAR_AVI_HEADER_LENGTH] = {
 	/* -- RIFF HEADER -- */
 	0x52, 0x49, 0x46, 0x46, /* 0x00; RIFF */
 	0x00, 0x00, 0x00, 0x00, /* 0x04; number of bytes following */
